--- a/Assignment-10/q2.html
+++ b/Assignment-10/q2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Change Background Color</title>
-    <link rel="stylesheet" href="container.css">
+    <link rel="stylesheet" href="q2.css">
 </head>
 <body>
     <div class="container">
@@ -13,6 +13,6 @@
         <button id="blueBtn">Blue</button>
     </div>
     
-    <script src="container.js"></script>
+    <script src="q2.js"></script>
 </body>
 </html>
